--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcuserdata
+*xcuserdata*
 profile
 *.moved-aside
 DerivedData
@@ -17,5 +17,4 @@ DerivedData
 *.hmap
 *.xccheckout
 *.xcworkspacedata
-
 *.xcuserstate
